--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "react-bootstrap": "^2.9.1",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
