--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     ]
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "express": "^4.17.3",
-    
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
