--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "express": "^4.17.3",
+    "react-bootstrap": "^2.9.1",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
