--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ runtime: nodejs20
 service: baroninsuranceandtaxagency # prefix/subdomain of the bucket specific to project and environment
 
 handlers:
-  - url: /(.*)
+  - url: /
     static_files: build/index.html
     upload: build/index.html
     secure: always
