--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starter-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "start": "node server.js",
     "dev": "react-scripts start",
